# tinder-for-pairs

./: .pre-commit-config.yaml  Dockerfile  alembic.ini  app.py  config.py  docker-compose.yaml  pyproject.toml  run.sh  shell.sh
kinopoisk/: api.py
match/: models.py
migration/: env.py
migration/versions/: 018047731c3a_add_email_field_add_index.py  19bfa79b903c_initial_commit.py  341a94b15e6f_added_date_created_for_user.py  b40106cd10e1_rename_field.py  cee3da0e127c_added_user_table_add_match_table.py  e2384572475f_initial.py  f3664672dd66_add_user_table.py
services/: __init__.py  alembic_models.py  base_model.py  create_router.py  database.py  models.py  routes.py  schemas.py  utils.py
user/: deps.py  models.py  routes.py  schemas.py  utils.py
